--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Actor", serif;
 }
@@ -63,14 +67,13 @@ body {
   .p-nobile {
     @apply text-gray-900;
   }
-  /* For vertical scrolling */
-  body:not(.horizontal-scrolling) {
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
 
-  /* For horizontal scrolling */
-  body.horizontal-scrolling {
+
+
+
+
+
+  .horizontal-scrolling {
     overflow-x: scroll;
     overflow-y: hidden;
     height: 100vh;
@@ -86,4 +89,64 @@ body {
   .section {
     height: 100vh; /* Ensure each section still takes full height on mobile */
   }
+
+  /* carousel */
+
+  
+
+}
+
+
+
+
+
+.box {
+  position: relative;
+  width: 200px;
+  height: 300px;
+  transform-style: preserve-3d;
+  animation: animate 20s linear infinite;
+
+}
+
+.box:hover{
+  animation-play-state: paused;
+}
+
+
+@keyframes animate {
+  0%{
+      transform: perspective(1000px) rotateY(0deg);
+  }
+  100%{
+      transform: perspective(1000px) rotateY(360deg);
+  }
+}
+
+.box span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin: center;
+  transform-style: preserve-3d;
+  transform: rotateY(calc(var(--i) * 36deg)) translateZ(450px);
+}
+
+
+
+.box span img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  border-radius: 15px;
+}
+
+img:hover{
+  transform: translateY(-2px);
+  
 }
